styles/globals.css
html,
body {
  background: #1e1e1e;;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.active-nav {
  text-decoration: underline;
}


.day {
  background: white;
  color: black;
  transition: all 0.3s
}
.day-main {
  background: #eee;
}

.night {
  background: #1e1e1e;
  color: #eee;
  transition: all 0.3s
}

.night-main {
  background: #333;
}

.styled-link {
  text-decoration: underline;
}

.styled-link:hover {
  color: #ab0000;
}

.styled-section {
    margin: 20px 0;
    max-width: 700px;
}

.toc-layout {
  display: flex;
  margin-right: 1.5rem;
  padding: 0 1rem;
}

.wrapper {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 15px 20px;
  width: 100%;
}

#table-of-contents {
  border-radius: 4px;
  list-style: none;
  margin-left: 10px;
  min-width: 200px;
  padding: 0.5rem 1rem; 
  position: sticky; 
  position: -webkit-sticky;
  top: 20px;
}

.night #table-of-contents li {
  border-bottom: 11px white;
  color: #e6e6e6;
  padding: 0.5rem 1rem; 
}

.day #table-of-contents li {
  border-bottom: 11px white;
  color: #6e6e6e;
  padding: 0.5rem 1rem; 
}

.day #table-of-contents li.active > a {
  color: black;
  text-decoration: underline;
}

.night #table-of-contents li.active > a  {
  color: white;
  text-decoration: underline;
}

.night #table-of-contents li > a:hover {
  border-radius: 20;
  color: white;
  text-decoration: underline;
}

.day #table-of-contents li > a:hover {
  border-radius: 20;
  color: black;
  text-decoration: underline;
}

